--- a/src/app.style.scss
+++ b/src/app.style.scss
@@ -9,13 +9,14 @@
   align-items: center;
   padding: 10px;
   background: #2b3160;
+  height: 65px;
 
   #register {
     background-color: rgb(18, 175, 227);
     border-radius: 60px;
     color: rgb(255, 255, 255);
-    padding: 15px;
-    font-size: 18px;
+    padding: 10px;
+    font-size: 16px;
     transition: background-color 0.3s ease, transform 0.3s ease;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 900;
@@ -71,8 +72,6 @@
 
 @media (max-width: 768px) {
   .navbar {
-    margin-top: -40px;
-
     &__logo img {
       width: 60px;
       margin-left: -5px;
@@ -82,12 +81,11 @@
       display: flex;
       margin-left: -60px;
       margin-right: 20px;
-      margin-top: 80px;
-      gap: 8px;
+      gap: 2px;
     }
 
     &__links a {
-      font-size: 12px;
+      font-size: 10px;
     }
     &__btn {
       margin-left: -100px;
