--- a/src/components/galleryPage/galleryPage.style.scss
+++ b/src/components/galleryPage/galleryPage.style.scss
@@ -1,34 +1,65 @@
 .gallery {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  text-align: center;
+  gap: 50px;
+  margin-left: 40px;
+  margin-right: 40px;
 
   &__video {
-    position: relative;
-    z-index: 1;
-    margin-top: 80px;
-
-    color: #fff;
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
+    margin-top: 50px;
 
     &__part {
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 900px;
-      height: 600px;
+      width: 700px;
+      height: 550px;
+    }
+  }
+  &__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: black;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    gap: 20px;
+    &__flags {
+      font-size: 70px;
+      p {
+        display: inline-block;
+        animation: pulse 1.5s ease-in-out infinite alternate;
+      }
+      @keyframes pulse {
+        0% {
+          transform: scale(1);
+        }
+        100% {
+          transform: scale(1.1);
+        }
+      }
     }
   }
 }
 
 @media screen and (max-width: 768px) {
   .gallery {
+    display: flex;
+    flex-direction: column;
     &__video {
+      margin-left: -20px;
       &__part {
         width: 350px;
         height: 500px;
+        margin-top: -20px;
+      }
+    }
+    &__text {
+      font-size: 18px;
+      margin-top: -20px;
+      &__flags {
+        font-size: 40px;
       }
     }
   }
