--- a/src/components/imageSlider/imageSlider.style.scss
+++ b/src/components/imageSlider/imageSlider.style.scss
@@ -53,7 +53,8 @@
   .container {
     &__background1 {
       img {
-        height: 300px;
+        height: 290px;
+        margin-top: 30px;
       }
       &__text {
         font-size: 40px;
