--- a/src/components/registerPage/registerPage.style.scss
+++ b/src/components/registerPage/registerPage.style.scss
@@ -141,7 +141,7 @@
 
           input[type="text"],
           select {
-            width: 420px;
+            width: 410px;
             padding: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -156,10 +156,10 @@
           }
         }
         &__button {
-          width: 100%;
+          width: 450px;
           padding: 10px;
           margin-top: 30px;
-          margin-bottom: 50px;
+          margin-left: -20px;
           background-color: #19a0eea6;
           color: #000000;
           border: none;
@@ -188,60 +188,61 @@
       display: none;
     }
     &__container {
-      width: 350px;
-      height: 350px;
-
-      // &__back {
-      //   display: flex;
-      //   justify-content: center;
-      //   align-items: center;
-      //   margin-left: -40px;
-      //   height: 200px;
-      // }
+      width: 360px;
+      height: 720px;
+      margin-top: -80px;
       h2 {
-        font-size: 15px;
+        font-size: 18px;
+        margin-top: -70px;
       }
 
-      form {
-        .form-group {
+      &__form {
+        &__group {
           label {
             font-weight: bold;
-            font-size: 10px;
+            font-size: 13px;
           }
 
           input[type="text"],
           input[type="email"],
           input[type="tel"],
           select {
-            width: 260px;
+            width: 320px;
             height: 25px;
             font-size: 13px;
           }
         }
-        .form-row {
+        &__row {
           input[type="date"],
           input[type="text"],
           select {
-            width: 120px;
+            width: 150px;
             height: 25px;
             font-size: 10px;
           }
         }
-        button {
-          width: 100%;
-          height: 35px;
-          padding: 10px;
-          margin-bottom: 10px;
-          margin-top: 10px;
-          font-size: 15px;
-        }
       }
       &__payment {
-        width: 350px;
+        width: 330px;
+        &__form {
+          &__button {
+            width: 330px;
+            margin-left: -20px;
+          }
+          &__row {
+            &__group {
+            }
+          }
+          &__info {
+            input[type="text"],
+            select {
+              width: 290px;
+              height: 25px;
+              font-size: 13px;
+            }
+          }
+        }
       }
-    }
-    .back__card {
-      font-size: 10px;
     }
   }
 }
