--- a/src/components/infoPage/infoPage.style.scss
+++ b/src/components/infoPage/infoPage.style.scss
@@ -48,10 +48,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 350px;
-    height: 400px;
-    margin-left: 20px;
-    margin-top: 20px;
+    // width: 350px;
+    // height: 400px;
+    margin: 20px auto;
 
     h1 {
       font-size: 18px;
