--- a/src/app.style.scss
+++ b/src/app.style.scss
@@ -20,7 +20,8 @@
     border-radius: 60px;
     color: rgb(255, 255, 255);
     padding: 10px;
-    font-size: 16px;
+    font-size: 19px;
+    width: 150px;
     transition: background-color 0.3s ease, transform 0.3s ease;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 900;
